# lab_rust_crud

./: Cargo.toml  docker-compose.yml
migrations/: 20240107113632_scorecards.sql
scripts/: init-db.sh  migrate-db.sh
src/: api.rs  app_router.rs  lib.rs  logging.rs  main.rs
src/app_router/: mod.rs  tests.rs
src/io/: mod.rs  routable.rs  route_path.rs  router.rs
src/kits/: api.rs  mod.rs
src/kits/classrooms/: classroom.rs  mod.rs  repo.rs  tests.rs
src/kits/scorecards/: db.rs  dto.rs  mock_db.rs  mod.rs  repo.rs  scorecard.rs  tests.rs
src/kits/scorecards/create/: mod.rs  repo.rs
src/kits/scorecards/list/: mod.rs  repo.rs
