[package]
name = "lab_rust_crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
http-body-util = "0.1.0"
hyper-util = { version = "0.1.2", features = ["client", "client-legacy"] }
mime = "0.3.17"
serde = {version = "1.0.193" ,features = ["derive"]}
serde_json = "1.0.108"
tokio = {version = "1.35.1", features = ["macros","rt-multi-thread"]}
tower = "0.4.13"
tower-http = {version = "0.5.0", features = ["trace"]}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}

